--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.16.2",
     "ioredis": "^3.1.4",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "zeromq": "^4.6.0"
   }
 }
