--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
+        "laravel/passport": "^4.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
+        "laravelcollective/remote": "^5.4.0",
         "nesbot/carbon": "^1.22",
         "predis/predis": "^1.1@dev"
     },
