Modificacion de llamados al cinematico

--- a/.env
+++ b/.env
@@ -35,6 +35,7 @@ PUSHER_APP_SECRET=
 SOCKET_IO_IP_ADDRESS=192.168.1.70
 SOCKET_IO_PORT=3000
 CHANEL_NAME=test-channel
+CHANEL_NAME_REQUEST=request_event
 
 PERSONAL_CLIENT_ID=1
 PERSONAL_CLIENT_SECRET=COXfzBXtSIrE2k00lO4p4OJC14WHWYbxoey57LJm
