--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-APP_NAME=Laravel
+APP_NAME=Simulador_Mantenimiento
 APP_ENV=local
 APP_KEY=base64:TjISuJxAT2kXaNFczs9pE35Nx7MqObktziJhfVmZbSE=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=cesedam_maintenance
-DB_USERNAME=root
-DB_PASSWORD=toor
+DB_DATABASE=cesisccam_maintenance
+DB_USERNAME=cesisccam
+DB_PASSWORD=cesisccam
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
