Add validate to delete element when used in practice

--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=cesedam_maintenance
-DB_USERNAME=cesisccam
-DB_PASSWORD=cesisccamSm18
+DB_USERNAME=root
+DB_PASSWORD=toor
 
 BROADCAST_DRIVER=redis
 CACHE_DRIVER=file
